# convert_checkpoint_to_lsg

./: .gitignore  LICENSE.txt  README.md  convert_bart_checkpoint.py  convert_barthez_checkpoint.py  convert_bert_checkpoint.py  convert_camembert_checkpoint.py  convert_checkpoint.py  convert_distilbert_checkpoint.py  convert_pegasus_checkpoint.py  convert_roberta_checkpoint.py  convert_xlm_roberta_checkpoint.py  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
bart/: modeling_lsg_bart.py
barthez/: modeling_lsg_barthez.py
bert/: modeling_lsg_bert.py
block_local_attention/: README.md  block_local_attention.py
camembert/: modeling_lsg_camembert.py
conversion_scripts/: conversion_utils.py  convert_bart_checkpoint.py  convert_barthez_checkpoint.py  convert_bert_checkpoint.py  convert_camembert_checkpoint.py  convert_distilbert_checkpoint.py  convert_mbart_checkpoint.py  convert_pegasus_checkpoint.py  convert_roberta_checkpoint.py  convert_xlm_roberta_checkpoint.py  dummy_conversion.py
convert_models/: conversion_utils.py  dummy_conversion.py
convert_models/albert/: convert_albert_checkpoint.py  modeling_lsg_albert.py
convert_models/bart/: convert_bart_checkpoint.py  modeling_lsg_bart.py
convert_models/barthez/: convert_barthez_checkpoint.py  modeling_lsg_barthez.py
distilbert/: modeling_lsg_distilbert.py
lsg_converter/: __init__.py  conversion_utils.py  converter.py  dummy_conversion.py
pegasus/: modeling_lsg_pegasus.py
roberta/: modeling_lsg_roberta.py
xlm_roberta/: modeling_lsg_xlm_roberta.py
(+49 files in other folders)
