[metadata]
name = lsg-converter
version = 0.1.9
author = Charles Condevaux
author_email = charles.condevaux@gmail.com
description = To convert HuggingFace models to their LSG variant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ccdv-ai/convert_checkpoint_to_lsg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires = 
    transformers>=4.36.1
    torch>=1.8

[options.package_data]
sample = 
    img/attn.png